# DodgeIt

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt  main.cpp
src/: BulletEntity.cpp  BulletEntity.hpp  CMakeLists.txt  Collider.hpp  Component.cpp  Component.hpp  EnemyEntity.cpp  EnemyEntity.hpp  Game.cpp  Game.hpp  MapRender.hpp  MovementComponent.cpp  MovementComponent.hpp  PlayerEntity.cpp  PlayerEntity.cpp~RF9112b4c.TMP  PlayerEntity.hpp  Render.hpp  main.cpp  main_test.cpp
src/ecs/: CMakeLists.txt  component_manager.hpp  entity_manager.cpp  entity_manager.hpp  system_manager.cpp  system_manager.hpp  type.hpp
src/ecs/internal/: componentarray.inl
